# SshServer

./: .gitignore  .travis.yml  README.md  build.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fr_ralala_sshd_net_ptm_NativeProcessPTM.cpp  fr_ralala_sshd_net_ptm_NativeProcessPTM.h
app/src/main/java/fr/ralala/sshd/: SshServerApplication.java
app/src/main/java/fr/ralala/sshd/net/: B64.java  NetworkBroadcaster.java  NetworkStatusListener.java  SshServer.java  SshServerEntry.java  SshServerEntryFactory.java
app/src/main/java/fr/ralala/sshd/net/ptm/: NativeProcessPTM.java  ShellConfiguration.java  ShellPTM.java
app/src/main/java/fr/ralala/sshd/ui/: NotificationFactory.java  SnackException.java  SshServerActivity.java  SshServerEditOrAddActivity.java  UIHelper.java
app/src/main/java/fr/ralala/sshd/ui/adapter/: SshServerEntriesArrayAdapter.java  SshServerEntriesArrayAdapterMenuListener.java
app/src/main/java/org/ralala/android/ssh/server/: SshServerActivity.java  SshServerApplication.java  Tools.java
app/src/main/java/org/ralala/android/ssh/server/adapter/: SshServerEntriesArrayAdapter.java  SshServerEntriesArrayAdapterMenuListener.java
app/src/main/res/anim/: fab_state_list_animator.xml
app/src/main/res/drawable/: border.xml  fab_background.xml  fab_plus.xml  plus.xml
app/src/main/res/layout/: activity_ssh.xml  add_srv_box_content.xml  alert_dialog_exception.xml  simple_spinner_dropdown_item.xml  srv_listview_row.xml
app/src/main/res/menu/: activity_add_ssh_server.xml  activity_ssh.xml  popup_listview.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
